@@ -47,6 +47,9 @@ something at the intersection of Rails3, CouchDB and rufus-jig
      "test/test.rb",
      "test/ut_0_fixtures.rb",
      "test/ut_10_value.rb",
+     "test/ut_11_model_view_range.rb",
+     "test/ut_12_model_default.rb",
+     "test/ut_13_one_doc_model_default.rb",
      "test/ut_1_model.rb",
      "test/ut_2_model_view.rb",
      "test/ut_3_model_lint.rb",
